Doodle editer now has cancel / close button.

--- a/public/index.html
+++ b/public/index.html
@@ -501,8 +501,9 @@
 		&nbsp&nbsp&nbsp
 		<br>
 		<br>
-		<div style="position:relative; text-align:right; right:5%">
-			<span id="uiDrawZoneCloseButton" class="button">Close</span>
+		<div>
+			<span id="uiDrawZoneCloseDoodleButton" class="button" style="position:relative; text-align:left; left:5%">Cancel / Close Doodle</span>
+			<span id="uiDrawZoneCloseEditorButton" class="button" style="position:relative; float:right; top:-10px; text-align:right; right:5%">Close Editor</span>
 		</div>
 		<br>
 	</div>
