Fixes to doodle to handle oversized images in editor.

--- a/public/index.html
+++ b/public/index.html
@@ -496,7 +496,13 @@
 		</table>
 		<br>
 		&nbsp&nbsp&nbsp
-		<canvas id="uiDrawZoneCanvas" width="500" height="500" style="border:1px solid black">
+		<canvas id="uiDrawZoneCanvas" width="500" height="500" style="border:1px solid black;
+			position: relative;
+			left: 50%;
+			-webkit-transform: translate(-50%, 0);
+			-moz-transform: translate(-50%, 0);
+			-ms-transform: translate(-50%, 0);
+			transform: translate(-50%, 0);">
 		</canvas>
 		&nbsp&nbsp&nbsp
 		<br>
