Moved css from index and ui to style_ui.

--- a/public/index.html
+++ b/public/index.html
@@ -450,15 +450,15 @@
 					</tr>
 					<tr>
 						<td>&nbsp&nbsp</td>
-						<td> <div id="uinmColorPick1"></div> </td>
-						<td> <div id="uinmColorPick2"></div> </td>
-						<td> <div id="uinmColorPick3"></div> </td>
+						<td> <div id="uinmColorPick1" class="uinmColorPickBlock"></div> </td>
+						<td> <div id="uinmColorPick2" class="uinmColorPickBlock"></div> </td>
+						<td> <div id="uinmColorPick3" class="uinmColorPickBlock"></div> </td>
 					</tr>
 					<tr>
 						<td>&nbsp&nbsp</td>
-						<td> <div id="uinmColorPick4"></div> </td>
-						<td> <div id="uinmColorPick5"></div> </td>
-						<td> <div id="uinmColorPick6"></div> </td>
+						<td> <div id="uinmColorPick4" class="uinmColorPickBlock"></div> </td>
+						<td> <div id="uinmColorPick5" class="uinmColorPickBlock"></div> </td>
+						<td> <div id="uinmColorPick6" class="uinmColorPickBlock"></div> </td>
 					</tr>
 				</table>
 			</div>
@@ -496,24 +496,18 @@
 		</table>
 		<br>
 		&nbsp&nbsp&nbsp
-		<canvas id="uiDrawZoneCanvas" width="500" height="500" style="border:1px solid black;
-			position: relative;
-			left: 50%;
-			-webkit-transform: translate(-50%, 0);
-			-moz-transform: translate(-50%, 0);
-			-ms-transform: translate(-50%, 0);
-			transform: translate(-50%, 0);">
+		<canvas id="uiDrawZoneCanvas" width="500" height="500">
 		</canvas>
 		&nbsp&nbsp&nbsp
 		<br>
 		<br>
 		<div>
-			<span id="uiDrawZoneCloseDoodleButton" class="button" style="position:relative; text-align:left; left:5%">Cancel / Close Doodle</span>
-			<span id="uiDrawZoneCloseEditorButton" class="button" style="position:relative; float:right; top:-10px; text-align:right; right:5%">Close Editor</span>
+			<span id="uiDrawZoneCloseDoodleButton" class="button">Cancel / Close Doodle</span>
+			<span id="uiDrawZoneCloseEditorButton" class="button">Close Editor</span>
 		</div>
 		<br>
 	</div>
-	<div id="uiDrawZoneEraseReference" style="position:absolute;top:-100;left:-100;width:1;border:1px solid black;border-radius:50%;z-index:10003;pointer-events:none" >
+	<div id="uiDrawZoneEraseReference">
 	</div>
 	
 	
