Remote file transfer bug fix

--- a/public/display.html
+++ b/public/display.html
@@ -41,6 +41,8 @@
 <script async src="src/movie_player.js"></script>
 <script async src="src/pdf_viewer.js"></script>
 <script async src="src/media_stream.js"></script>
+<script async src="src/openseadragon.js"></script>
+<script async src="src/histologyViewer.js"></script>
 <script async src="src/media_block_stream.js"></script>
 <script async src="src/ui_builder.js"></script>
 <script async src="src/pointer.js"></script>
