update mobile pointer

--- a/public/index.html
+++ b/public/index.html
@@ -300,6 +300,7 @@
 		<div id="sage2MobileTrackpad"></div>
 		<div id="sage2MobileButtons">
 			<div id="sage2MobileLeftButton"></div>
+			<div id="sage2MobileSpecialButton"></div>
 			<div id="sage2MobileRightButton"></div>
 		</div>
 		<img alt="closeMobileSAGE2Pointer" id="closeMobileSAGE2Pointer" src="images/closemobilepointer.svg" width="32" height="32" style="position:absolute; left:6px; top:6px;"/>
