manual patch local vxlab UI

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
 <script async src="src/SAGE2_interaction.js"></script>
 <script async src="src/SAGE2_DisplayUI.js"></script>
 <script async src="src/SAGE2_UI.js"></script>
+<script async src="vxlab.js"></script>
 
 <!-- Style sheets -->
 <link rel="stylesheet" type="text/css" href="css/fonts.css"/>
@@ -144,7 +145,23 @@
 						<img id="ezDraw"       alt="ezDraw"     src="images/ui/graycircle-ezDraw.svg"       width="48" height="48"/>
 						<p id="ezDrawLabel">Doodle</p>
 					</td>
-
+                                        <td>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-start">PC1 on</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-start">PC2 on</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-start">VC on</a>
+                                                <br>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-stop">PC1 off</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-stop">PC2 off</a>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-stop">VC off</a>
+                                                <div style="text-align:left; margin:0px 0px auto;">
+                                                <label for="req_url"></label>
+                                                <input type="Text" id="req_url" maxlength="35" size="12"/>
+                                                <input type='button' onclick='loadWebURL()' value='Web'>
+                                                <input type='button' onclick='vncURL()' value='VNC'>
+                                                </div>
+                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/mydesktop">MyDesktop</a>
+                                                <br><a target="_vxlab_panel" href="http://10.234.2.30/~sage/">More...</a>
+                                        </td>
 				</tr>
 			</table>
 		</div>
