strip virtual desktop from screen share popup

--- a/public/ssindex.html
+++ b/public/ssindex.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 
-<title>SAGE2 UI - Mobile</title>
+<title>SAGE2 UI - Screen Share</title>
 
 <script type="text/javascript">
 	// SAGE2 is available for use under the SAGE2 Software License 
@@ -49,7 +49,6 @@
 		</div>
 
 		<div id="displayUIDiv" style="display:none;">
-			<div id="applicationsDiv"></div>
 			<canvas id="sage2UICanvas"></canvas>
 		</div>
 
@@ -58,32 +57,18 @@
 			<table id="menuUI">
 				<tr>
 					<td id="sage2pointerContainer">
-						<img id="sage2pointer" alt="pointer" src="images/ui/[graycircle]-sage2pointer.svg" width="48" height="48"/>
-						<p id="sage2pointerLabel">SAGE2 Pointer</p>
 					</td>
 					<td id="sharescreenContainer">
-						<img id="sharescreen"  alt="sharescreen"  src="images/ui/[graycircle]-sharescreen.svg"  width="48" height="48"/>
-						<p id="sharescreenLabel">Screen Sharing</p>
 					</td>
 					<td id="applauncherContainer">
-						<img id="applauncher"  alt="applauncher"  src="images/ui/[graycircle]-applauncher.svg"  width="48" height="48"/>
-						<p id="applauncherLabel">App Launcher</p>
 					</td>
 					<td id="mediabrowserContainer">
-						<img id="mediabrowser" alt="mediabrowser" src="images/ui/[graycircle]-mediabrowser.svg" width="48" height="48"/>
-						<p id="mediabrowserLabel">Media Browser</p>
 					</td>
 					<td id="arrangementContainer">
-						<img id="arrangement"  alt="arrangement"  src="images/ui/[graycircle]-arrangement.svg"  width="48" height="48"/>
-						<p id="arrangementLabel">Arrangement</p>
 					</td>
 					<td id="settingsContainer">
-						<img id="settings"     alt="settings"     src="images/ui/[graycircle]-settings.svg"     width="48" height="48"/>
-						<p id="settingsLabel">Settings</p>
 					</td>
 					<td id="infoContainer">
-						<img id="info"         alt="info"         src="images/ui/[graycircle]-info.svg"         width="48" height="48"/>
-						<p id="infoLabel">Information</p>
 					</td>
 				</tr>
 			</table>
