--- a/public/index.html
+++ b/public/index.html
@@ -146,21 +146,33 @@
 						<p id="ezDrawLabel">Doodle</p>
 					</td>
                                         <td>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-start">PC1 on</a>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-start">PC2 on</a>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-start">VC on</a>
+        					<input id="clickMe" type="button" value="Input1 on" onclick="httpGetAsync('https://10.234.2.30:8086/capture-laptop1-start');"/>
+        					<input id="clickMe" type="button" value="Input2 on" onclick="httpGetAsync('https://10.234.2.30:8086/capture-laptop2-start');"/>
+        					<input id="clickMe" type="button" value="VC on" onclick="httpGetAsync('https://10.234.2.30:8086/capture-vc1-start');"/>
                                                 <br>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop1-stop">PC1 off</a>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-laptop2-stop">PC2 off</a>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/capture-vc1-stop">VC off</a>
+        					<input id="clickMe" type="button" value="Input1 off" onclick="httpGetAsync('https://10.234.2.30:8086/capture-laptop1-stop');"/>
+        					<input id="clickMe" type="button" value="Input2 off" onclick="httpGetAsync('https://10.234.2.30:8086/capture-laptop2-stop');"/>
+        					<input id="clickMe" type="button" value="VC off" onclick="httpGetAsync('https://10.234.2.30:8086/capture-vc1-stop');"/>
                                                 <div style="text-align:left; margin:0px 0px auto;">
                                                 <label for="req_url"></label>
                                                 <input type="Text" id="req_url" maxlength="35" size="12"/>
                                                 <input type='button' onclick='loadWebURL()' value='Web'>
                                                 <input type='button' onclick='vncURL()' value='VNC'>
                                                 </div>
-                                                <a target="_vxlab_cmd" href="http://10.234.2.30:8085/mydesktop">MyDesktop</a>
-                                                <br><a target="_vxlab_panel" href="http://10.234.2.30/~sage/">More...</a>
+        					<input id="clickMe" type="button" value="Arrange" onclick="httpGetAsync('https://10.234.2.30:8086/arrange-apps');"/>
+        					<input id="clickMe" type="button" value="0" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?0');"/>
+        					<input id="clickMe" type="button" value="1" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?1');"/>
+        					<input id="clickMe" type="button" value="2" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?2');"/>
+        					<input id="clickMe" type="button" value="3" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?3');"/>
+        					<input id="clickMe" type="button" value="4" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?4');"/>
+        					<input id="clickMe" type="button" value="5" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?5');"/>
+        					<input id="clickMe" type="button" value="6" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?6');"/>
+        					<input id="clickMe" type="button" value="7" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?7');"/>
+        					<input id="clickMe" type="button" value="8" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?8');"/>
+        					<input id="clickMe" type="button" value="9" onclick="httpGetAsync('https://10.234.2.30:8086/appselect?9');"/>
+                                                <br>
+        					<input id="clickMe" type="button" value="MyDesktop" onclick="httpGetAsync('http://10.234.2.30:8085/mydesktop');"/>
+						<a target="_vxlab_panel" href="http://10.234.2.30/~sage/">More...</a>
                                         </td>
 				</tr>
 			</table>
